--- a/src/style.scss
+++ b/src/style.scss
@@ -1,13 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 :root {
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
-
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -15,7 +13,4 @@
     -webkit-text-size-adjust: 100%;
 }
 
-body{
-    
-}
-
+body {}
